left align on phone bug fix

--- a/styles.css
+++ b/styles.css
@@ -440,6 +440,9 @@ img.social-icons {
         text-align: left;
         color: #edf0f1;
     }
+    .left-align {
+        text-align: left;
+    }
 }
 
 
